force-app/main/default/objects/Account__mdt/Account__mdt.object-meta.xml
<CustomObject>
    <description>A 1:1 map to Accounts that have InternalEmailAddress__c populated. This should be done by Account trigger, but it is a manual process at the moment.

This allows EmailServices to query here for Id and name based on InternalEmailAddress__c, with the benefit that these metadata records are cached and the soql does not count for governor limits.</description>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>