force-app/main/default/objects/Account__mdt/fields/InternalEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InternalEmailAddress__c</fullName>
    <label>InternalEmailAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>